# yanta

./: .gitignore  .gitmodules  CMakeLists.txt  README  benchmarks.cpp  install.sh  splines.cpp  tests.cpp  yanta-mime.xml  yanta.cpp  yanta.desktop
cmake/: config.h.in
cmake/modules/: FindXCB.cmake
modules/yanta/: Backend.cpp  Backend.h  CMakeLists.txt  Signals.h
modules/yanta/document/: Document.h  Path.h  Selection.cpp  Stroke.h  Transformable.h
modules/yanta/gui/: BackendPainter.cpp  BackendPainter.h  BackendView.cpp  BackendView.h  Osd.cpp  Osd.h  OsdPainter.cpp  OsdRequest.h  OsdSignals.h  Quality.h  Rasterizer.h  SkiaDocumentPainter.cpp  SkiaDocumentPainter.h  SkiaOverlayPainter.cpp  SkiaOverlayPainter.h  SkiaStrokeBallPainter.cpp  SkiaStrokeLinePainter.cpp  SkiaStrokePathEffectPainter.cpp  TilesCache.cpp  TilesCache.h  TorusTexture.cpp  TorusTexture.h
modules/yanta/io/: DocumentPdfWriter.cpp  DocumentReader.cpp  DocumentWriter.cpp
modules/yanta/tools/: Erasor.cpp  Erasor.h  Lasso.h  PenMode.h  ToolSignals.h
modules/yanta/util/: Transformation.h  torus_mapping.hpp  tree.h
splines/: CairoCanvasPainter.cpp  CairoCanvasPainter.h  Canvas.cpp  Canvas.h  CanvasPainter.cpp  CanvasPainter.h  CanvasSignals.h  CanvasView.cpp  CanvasView.h  Osd.cpp  Osd.h  OsdPainter.cpp  OsdPainter.h  PenMode.h  PrefetchTexture.cpp  PrefetchTexture.h  SkiaCanvasPainter.cpp  SkiaCanvasPainter.h  Stroke.cpp  Stroke.h  StrokePoint.h  StrokePoints.h  Strokes.cpp  Strokes.h  StrokesReader.cpp  StrokesReader.h  StrokesWriter.cpp  StrokesWriter.h  Style.h
yanta/: Backend.cpp  Backend.h  BackendPainter.cpp  BackendPainter.h  BackendView.cpp  BackendView.h  Canvas.cpp  Canvas.h  CanvasPainter.cpp  CanvasPainter.h  CanvasPdfWriter.cpp  CanvasPdfWriter.h  CanvasReader.cpp  CanvasReader.h  CanvasSignals.h  CanvasView.cpp  CanvasView.h  CanvasWriter.cpp  CanvasWriter.h  Lasso.h  Osd.cpp  Osd.h  OsdPainter.cpp  OsdPainter.h  Overlay.h  OverlayObject.h  OverlayObjectVisitor.h  OverlaySignals.h  Page.cpp  Page.h  Path.h  PenMode.h  Precision.h  PrefetchTexture.cpp  PrefetchTexture.h  Selection.cpp  Selection.h  SkiaCanvasPainter.cpp  SkiaCanvasPainter.h  SkiaOverlayObjectPainter.cpp  (+13 more)
yanta/document/: Document.cpp  Document.h  DocumentElement.h  DocumentElementContainer.h  DocumentSignals.h  DocumentTreeRoiVisitor.cpp  DocumentTreeRoiVisitor.h  DocumentTreeVisitor.h  Page.cpp  Page.h  Path.h  Selection.cpp  Selection.h  Stroke.cpp  Stroke.h  Transformable.h
yanta/gui/: BackendPainter.cpp  BackendPainter.h  BackendView.cpp  BackendView.h  Osd.h  OsdPainter.cpp  OsdPainter.h  Overlay.h  OverlayObject.h  OverlayObjectVisitor.h  OverlaySignals.h  PrefetchTexture.cpp  PrefetchTexture.h  Rasterizer.h  SkiaDocumentPainter.cpp  SkiaDocumentPainter.h  SkiaDocumentVisitor.cpp  SkiaDocumentVisitor.h  SkiaOverlayObjectPainter.cpp  SkiaOverlayObjectPainter.h  SkiaOverlayPainter.cpp  SkiaOverlayPainter.h  SkiaStrokeBallPainter.cpp  SkiaStrokeBallPainter.h  SkiaStrokeLinePainter.cpp  SkiaStrokeLinePainter.h  SkiaStrokePainter.cpp  SkiaStrokePainter.h  SkiaStrokePathEffectPainter.cpp  SkiaStrokePathEffectPainter.h  TilesCache.cpp  TilesCache.h  TilingTexture.cpp  TilingTexture.h  TorusTexture.cpp  TorusTexture.h
yanta/io/: DocumentPdfWriter.cpp  DocumentPdfWriter.h  DocumentReader.cpp  DocumentReader.h  DocumentWriter.cpp  DocumentWriter.h
yanta/tools/: Erasor.cpp  Lasso.cpp  Lasso.h  PenMode.h  Tool.h  ToolSignals.h  Tools.h
yanta/util/: ring_mapping.hpp  tree.h  version_tag.h
